<resources>
    <string name="app_name">My Udacity Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="MyNanodegreeApps">My Android Nanodegree Apps!</string>
    <string name="SpotifyStreamer">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="LibraryApp">Library App</string>
    <string name="BuildItBigger">Build it bigger</string>
    <string name="XYZReader">XYZ Reader</string>
    <string name="Capstone">Capstone: My Own App</string>
</resources>
