<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.ashwinwadte.myudacityportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvMyAppsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/MyNanodegreeApps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#37474f" />

    <Button
        android:id="@+id/bSpotifyStreamer"
        style="@style/AppButtons"
        android:layout_below="@+id/tvMyAppsHeading"
        android:layout_marginTop="50dp"
        android:text="@string/SpotifyStreamer" />

    <Button
        android:id="@+id/bScoresApp"
        style="@style/AppButtons"
        android:layout_below="@+id/bSpotifyStreamer"
        android:text="@string/ScoresApp" />

    <Button

        android:id="@+id/bLibrary"
        style="@style/AppButtons"
        android:layout_below="@+id/bScoresApp"
        android:text="@string/LibraryApp" />

    <Button
        android:id="@+id/bBuildItBigger"
        style="@style/AppButtons"
        android:layout_below="@+id/bLibrary"
        android:text="@string/BuildItBigger" />

    <Button
        android:id="@+id/bXYZReader"
        style="@style/AppButtons"
        android:layout_below="@+id/bBuildItBigger"
        android:text="@string/XYZReader" />

    <Button
        android:id="@+id/bCapstone"
        style="@style/AppButtons.NewColor"
        android:layout_below="@+id/bXYZReader"
        android:text="@string/Capstone" />
</RelativeLayout>
